<resources>
    <string name="app_name">GroupMessager</string>
    <string name="action_settings">Settings</string>
    <string name="add_group">Add Group</string>
    <string name="action_save">Save</string>
    <string name="action_refresh">Refresh Contacts</string>
    <string name="action_dumpdb">Dump DB</string>
    <string name="action_compose">Compose Message</string>
    <string name="action_history">History</string>
    <string name="action_debug">Debug</string>
    <string name="action_delete">Delete</string>
</resources>
